--- a/index.html
+++ b/index.html
@@ -1,83 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <title>Confiável</title>
-
-  <!-- Responsivo -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Estilo básico -->
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #0f172a;
-      color: #f8fafc;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .app {
-      background: #020617;
-      padding: 24px;
-      border-radius: 12px;
-      width: 100%;
-      max-width: 400px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.6);
-    }
-
-    h1 {
-      text-align: center;
-      margin-bottom: 16px;
-    }
-
-    input, button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 10px;
-      border-radius: 8px;
-      border: none;
-      font-size: 16px;
-    }
-
-    input {
-      background: #020617;
-      color: white;
-      border: 1px solid #334155;
-    }
-
-    button {
-      background: #2563eb;
-      color: white;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background: #1d4ed8;
-    }
-
-    .status {
-      margin-top: 15px;
-      text-align: center;
-      font-size: 14px;
-      color: #38bdf8;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Confiavel App - Login</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-  <div class="app">
-    <h1>Confiável</h1>
-
-    <input type="text" placeholder="Digite algo..." />
-    <button>Cadastrar</button>
-
-    <div class="status">
-      App carregado com sucesso
-    </div>
-  </div>
+<div class="login-container">
+  <h1>Confiável App 🔒</h1>
+  <form id="loginForm">
+    <input type="email" id="email" placeholder="E-mail" required>
+    <input type="password" id="password" placeholder="Senha" required>
+    <button type="submit">Entrar</button>
+  </form>
+  <p id="msg"></p>
+</div>
+<script src="js/auth.js"></script>
 </body>
 </html>
